--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li>Pocket and Outline operations</li>
                     <li>V cutter support</li>
                     <li>mm or inch GCode output</li>
+                    <li>Plotter support</li>
                     <li>Supports Firefox, Chrome, and <a href="https://github.com/tbfleming/jscut/issues/24"><del>Safari</del></a></li>
                     <li>Works with Google Drive</li>
                 </ul>
@@ -62,7 +63,7 @@
                 Open Source
             </h2>
             <p>
-                Fork me on <a href="https://github.com/tbfleming/jscut">GitHub</a>
+                Fork me on <a href="https://github.com/polchky/jscut-plotter">GitHub</a>
             </p>
             <h2>
                 Discussion Group
